# AIML_Tutorial

./: .gitignore  ProductClassification.sln  README.md  app.py  requirements.txt
Classification/: Classification.csproj  Classification.sln  appsettings.json
Docker/: Dockerfile  app.py  (+1 more)
Langchain/: 00_Basic_Model.py  01_Getting_started.py  03_Basic_conversation.py  04_Chat_Models.py  05_Model_conversation.py  06_Prompt_Templates_Basic.py  07_Prompt_templates_Chat_model.py  08_Chains.py  09_chain_extended.py  10_Chain_Parallel.py  11_Chain_Branching.py  13_Streaming.py  14_Structured_outputs.py  common.py  file.txt  pyproject.toml
Langchain/12_Rag/: 01_Rag.py  02_Rag_Search.py  03_Rag_metadata.py  04_Rag_metadata_search.py  05_Rag_chatbot.py
Langchain/12_Rag/documents/: odessy.txt
Langchain/15_Agents/: 01_basic.py  02_Structured_output.py  03_Context.py  04_Middleware.py
Langgraph Tutorial/: .env.example  01_Getting_started.py  02_Basics.ipynb  03_Router.ipynb  04_Checkpointer.ipynb  05_State_memory.ipynb  06_Multiple_Schemas.ipynb  07_Filter_Trim_Messages.ipynb  08_Summarize_Messages.ipynb  09_Streaming_Responses_Workflow.ipynb  10_Interruption.ipynb  11_Time_Travel.ipynb  12_Parallelization.ipynb  12_Subgraphs.ipynb  13_Map_Reduce.ipynb  14_Memory_Store.ipynb  pyproject.toml
Langgraph Tutorial/.devcontainer/: Dockerfile  devcontainer.json
Langgraph Tutorial/Docs/: Langgraph Tutorial.md
Langgraph Tutorial/basics/: .env.example  langgraph.json  main.py
Langgraph Tutorial/basics/src/agent/: __init__.py  graph.py  node.py  state.py  tools.py
(+312 files in other folders)
